fixed alignment

--- a/CareWheels/www/css/style.css
+++ b/CareWheels/www/css/style.css
@@ -9,15 +9,16 @@ a{
   height: 30px;
   background: rgba(91,163,240,1);
   /*border radius*/
-  border-radius: 10px 10px 10px 10px;
+  border-radius: 5px 5px 5px 5px;
   border: 0 solid #000000;
   background: linear-gradient(to bottom, rgba(91,163,240,1) 0%, rgba(25,55,191,1) 100%);
 
   text-align: center;
   font-size: 20px;
   margin-bottom: 10px;
+  padding: 3px;
 
 }
 .devButton:active {
-  box-shadow: inset 0 0 20px 0 rgba(0,0,0,0.75);
+  box-shadow: inset 0 0 10px 0 rgba(0,0,0,0.5);
 }
